--- a/MeetingRoom/Pages/_ViewImports.cshtml
+++ b/MeetingRoom/Pages/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 @using MeetingRoom
+@using HtmlTags
 @namespace MeetingRoom.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, HtmlTags.AspNetCore
+@addTagHelper *, MeetingRoom
