--- a/MeetingRoom/Pages/Rooms/Details.cshtml
+++ b/MeetingRoom/Pages/Rooms/Details.cshtml
@@ -32,8 +32,6 @@
                         <td>
                             <display-tag for="Data.Items[i].Name" />
                         </td>
-                    </tr>
-                    <tr>
                         <td>
                             <display-tag for="Data.Items[i].Value" />
                         </td>
@@ -42,4 +40,7 @@
             </table>
         </dd>
     </dl>
+</div>
+<div>
+    <a asp-page="Index">Back to List</a>
 </div>
