--- a/MeetingRoom/Pages/Rooms/Index.cshtml
+++ b/MeetingRoom/Pages/Rooms/Index.cshtml
@@ -40,7 +40,7 @@
                 <td>
                     <a asp-page="Edit">Edit</a> |
                     <a asp-page="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-page="Delete">Delete</a>
+                    <a asp-page="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
             i++;
