--- a/MeetingRoom/Pages/Rooms/Index.cshtml
+++ b/MeetingRoom/Pages/Rooms/Index.cshtml
@@ -38,7 +38,7 @@
                     <display-tag for="Data.Results[i].Name" />
                 </td>
                 <td>
-                    <a asp-page="Edit">Edit</a> |
+                    <a asp-page="Edit" asp-page-handler="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-page="Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-page="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
