--- a/MeetingRoom/Pages/_Layout.cshtml
+++ b/MeetingRoom/Pages/_Layout.cshtml
@@ -33,6 +33,7 @@
                         <li><a asp-page="/Index">Home</a></li>
                         <li><a asp-page="/About">About</a></li>
                         <li><a asp-page="/Rooms/Index">Rooms</a></li>
+                        <li><a asp-page="/RoomAttributes/Index">Room Attributes</a></li>
                     </ul>
                 </div>
             </div>
