--- a/MeetingRoom/Pages/RoomAttributes/Index.cshtml
+++ b/MeetingRoom/Pages/RoomAttributes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Room Attributes</h2>
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -44,7 +44,7 @@
                     <display-tag for="Data.Results[i].Value" />
                 </td>
                 <td>
-                    <a asp-page="Edit">Edit</a> |
+                    <a asp-page="Edit" asp-page-handler="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-page="Details">Details</a> |
                     <a asp-page="Delete">Delete</a>
                 </td>
