--- a/MeetingRoom/Pages/RoomAttributes/Index.cshtml
+++ b/MeetingRoom/Pages/RoomAttributes/Index.cshtml
@@ -45,8 +45,8 @@
                 </td>
                 <td>
                     <a asp-page="Edit" asp-page-handler="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-page="Details">Details</a> |
-                    <a asp-page="Delete">Delete</a>
+                    <a asp-page="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-page="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
             i++;
