--- a/MeetingRoom/Pages/_Layout.cshtml
+++ b/MeetingRoom/Pages/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -34,6 +35,7 @@
                         <li><a asp-page="/About">About</a></li>
                         <li><a asp-page="/Rooms/Index">Rooms</a></li>
                         <li><a asp-page="/RoomAttributes/Index">Room Attributes</a></li>
+                        <li><a asp-page="/FoodItems/Index">Food</a></li>
                     </ul>
                 </div>
             </div>
