--- a/MeetingRoom/Pages/_Layout.cshtml
+++ b/MeetingRoom/Pages/_Layout.cshtml
@@ -36,6 +36,7 @@
                         <li><a asp-page="/Rooms/Index">Rooms</a></li>
                         <li><a asp-page="/RoomAttributes/Index">Room Attributes</a></li>
                         <li><a asp-page="/FoodItems/Index">Food</a></li>
+                        <li><a asp-page="/Schedules/Index">Schedules</a></li>
                     </ul>
                 </div>
             </div>
