--- a/MeetingRoom/Pages/Schedules/Index.cshtml
+++ b/MeetingRoom/Pages/Schedules/Index.cshtml
@@ -10,47 +10,47 @@
     <a asp-page="Create">Create New</a>
 </p>
 
-<form method="get">
-    <div class="form-actions no-color">
-        <p>
-            Find by name: <input type="text" name="SearchString" value="@Model.Data.CurrentFilter" />
-            <input type="submit" value="Search" class="btn btn-default" />
-            <a asp-page="Index">Back to Full List</a>
-        </p>
-    </div>
-</form>
-
 <table class="table">
     <thead>
         <tr>
-            <th>
-                <a asp-page="Index" asp-route-sortOrder="@Model.Data.NameSortParm" asp-route-currentFilter="@Model.Data.CurrentFilter">Name</a>
-            </th>
-            <th>
-                Date
-            </th>
-            <th>
-                Duration
-            </th>
+            <th>Name</th>
+            <th>Date</th>
+            <th>Duration</th>
+            <th>Food</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
         @{ int i = 0; }
-        @foreach (var item in Model.Data.Results)
+        @foreach (var item in Model.Data.Schedules)
         {
-            <tr>
+            string selectedRow = "";
+            if (item.Id == Model.Data.Id)
+            {
+                selectedRow = "success";
+            }
+            <tr class="@selectedRow">
                 <td>
-                    <display-tag for="Data.Results[i].Name" />
+                    <display-tag for="Data.Schedules[i].Name" />
                 </td>
                 <td>
-                    <display-tag for="Data.Results[i].DateDisplay" />
+                    <display-tag for="Data.Schedules[i].Date" />
                 </td>
-                <th>
-                    <display-tag for="Data.Results[i].Duration" />
-                </th>
                 <td>
+                    <display-tag for="Data.Schedules[i].Duration" />
+                </td>
+                <td>
+                    @{
+                        foreach (var food in item.Servings)
+                        {
+                            @food.Name <br />
+                        }
+                    }
+                </td>
+                <td>
+                    <a asp-page="Index" asp-route-id="@item.Id">Select</a> |
                     <a asp-page="Edit" asp-page-handler="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-page="UpdateFood" asp-route-id="@item.Id">Food</a> |
                     <a asp-page="Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-page="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
@@ -59,3 +59,21 @@
         }
     </tbody>
 </table>
+
+@if (Model.Data.ServingInfo.Any())
+{
+    <h3>Following items served in the meeting</h3>
+    <table class="table">
+        <tr>
+            <th>Name</th>
+            <th>Time In</th>
+        </tr>
+        @foreach (var item in Model.Data.ServingInfo)
+        {
+            <tr>
+                <td>@item.Name</td>
+                <td>@item.DisplayTime</td>
+            </tr>
+        }
+    </table>
+}
