--- a/MeetingRoom/Pages/Schedules/UpdateFood.cshtml
+++ b/MeetingRoom/Pages/Schedules/UpdateFood.cshtml
@@ -12,7 +12,26 @@
     <div class="col-md-4">
         <form method="post">
             @Html.HiddenFor(m => m.Data.Id)
-            @Html.DisplayFor(m => m.Data.Name)
+            <dl class="dl-horizontal">
+                <dt>
+                    <display-label-tag For="Data.Name" />
+                </dt>
+                <dd>
+                    <display-tag for="Data.Name" />
+                </dd>
+                <dt>
+                    <display-label-tag For="Data.Date" />
+                </dt>
+                <dd>
+                    <display-tag for="Data.Date" />
+                </dd>
+                <dt>
+                    <display-label-tag For="Data.Duration" />
+                </dt>
+                <dd>
+                    <display-tag for="Data.Duration" />
+                </dd>
+            </dl>
             <div class="form-group">
                 @{ 
                     int i = 0;
